@@ -104,12 +104,26 @@ public class BundleJre extends ArtifactGenerator {
 			
 			Logger.info("Using " + modulesDir + " modules directory");
 	
-			File jlink = new File(currentJdk, "/bin/jlink");
-	
 			if (destinationFolder.exists()) FileUtils.removeFolder(destinationFolder);
+
+			String jlink = new File(currentJdk, "/bin/jlink").getAbsolutePath();
 			
 			// generates customized jre using modules
+<<<<<<< Updated upstream:src/main/java/io/github/fvarrui/javapackager/packagers/BundleJre.java
 			CommandUtils.execute(jlink.getAbsolutePath(), "--module-path", modulesDir, "--add-modules", modules, "--output", destinationFolder, "--no-header-files", "--no-man-pages", "--strip-debug", "--compress=2");
+=======
+			CommandUtils.execute(
+					jlink, 
+					"--vm=client", 
+					"--module-path", modulesDir, 
+					"--add-modules", modules, 
+					"--output", destinationFolder, 
+					"--no-header-files", 
+					"--no-man-pages", 
+					"--strip-debug", 
+					"--compress=2"
+				);
+>>>>>>> Stashed changes:src/main/java/io/github/fvarrui/javapackager/common/generators/BundleJre.java
 	
 			// sets execution permissions on executables in jre
 			File binFolder = new File(destinationFolder, "bin");
